force-app/main/default/objects/Account_Health_Metrics__c/Account_Health_Metrics__c.object-meta.xml
<CustomObject>
    <label>Account Health Metrics</label>
    <nameField>
        <displayFormat>AHM-{0000}</displayFormat>
        <label>Account Health Metrics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Health Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>