force-app/main/default/objects/Account_Health_Metrics__c/fields/Average_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Health_Score__c</fullName>
    <label>Average Health Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>