force-app/main/default/objects/Account_Health_Metrics__c/fields/Column_12__c.field-meta.xml
<CustomField>
    <fullName>Column_12__c</fullName>
    <label>Column 12</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>