force-app/main/default/objects/Account_Health_Metrics__c/fields/Health_Score_Date__c.field-meta.xml
<CustomField>
    <fullName>Health_Score_Date__c</fullName>
    <label>Health Score Date</label>
    <type>Date</type>
</CustomField>