force-app/main/default/objects/Account_Health_Metrics__c/fields/Notable_Contact_1__c.field-meta.xml
<CustomField>
    <fullName>Notable_Contact_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notable Contact 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Health Metrics</relationshipLabel>
    <relationshipName>Account_Health_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>