force-app/main/default/objects/Account_Health_Metrics__c/fields/Notable_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Notable_Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notable Contact 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Health Metrics (Notable Contact 2)</relationshipLabel>
    <relationshipName>Account_Health_Metrics1</relationshipName>
    <type>Lookup</type>
</CustomField>