force-app/main/default/objects/Account_Health_Metrics__c/fields/Notable_Contact_3__c.field-meta.xml
<CustomField>
    <fullName>Notable_Contact_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notable Contact 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Health Metrics (Notable Contact 3)</relationshipLabel>
    <relationshipName>Account_Health_Metrics2</relationshipName>
    <type>Lookup</type>
</CustomField>