force-app/main/default/objects/Account_Health_Metrics__c/fields/Score_Month__c.field-meta.xml
<CustomField>
    <fullName>Score_Month__c</fullName>
    <formula>CASE(Month(Health_Score_Date__c),
							1, &apos;January&apos;,
							2, &apos;February&apos;,
							3, &apos;March&apos;,
							4, &apos;April&apos;,
							5, &apos;May&apos;,
							6, &apos;June&apos;,
							7, &apos;July&apos;,
							8, &apos;August&apos;,
							9, &apos;September&apos;,
							10, &apos;October&apos;,
							11, &apos;November&apos;,
							12, &apos;December&apos;,
					&apos;&apos;
							)</formula>
    <label>Score Month</label>
    <type>Text</type>
</CustomField>