force-app/main/default/objects/Account_Health_Metrics__c/fields/Score_Year__c.field-meta.xml
<CustomField>
    <fullName>Score_Year__c</fullName>
    <formula>TEXT( YEAR(Health_Score_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score Year</label>
    <type>Text</type>
</CustomField>